--- a/index.html
+++ b/index.html
@@ -6,15 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/c3ff2d5888.js" crossorigin="anonymous"></script>
+   <link rel="preconnect" href="https://fonts.gstatic.com">
+   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&amp;family=Poppins:wght@500;700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>My Software Portfolio</title>
 </head>
 <body>
+    <div class="hero">
     <p>
-        Hello, I'm
+        👋 Hello, I'm
     </p>
 <h1>Stella-Maris Ojideh
-
 </h1>
+<h2 class="mb-5">Front-end Developer from London, UK</h2>
+<div>
+    <a href="#" class="btn btn-branding">Contact Me</a>
+</div>
+</div>
 </body>
 </html>
