--- a/index.html
+++ b/index.html
@@ -29,6 +29,30 @@
     <title>My Software Portfolio</title>
   </head>
   <body>
+     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top align-items-center shadow">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="">S M E O</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" href="">Stella-Maris Ojideh</a>
+            <a class="nav-link" href="">Home</a>
+            <a class="nav-link" href="">About Me</a>
+            <a class="nav-link" href="">Contact Me</a>
+          </div>
+        </div>
+    </div>
+    </nav>
     <div class="hero">
       <p>👋 Hello, I'm</p>
       <h1>Stella-Maris Ojideh</h1>
@@ -59,7 +83,7 @@
         </div>
       </div>
       <div class="row mb-5">         
-        <div class="col-6">           
+        <div class="col">           
           <div class="project-desciption">             
             <h3 class="mb-5">Plants Landing Page</h3>             
             <p class="mb-5 text-muted">               
@@ -68,7 +92,7 @@
               <a href="https://www.shecodes.io/workshops/shecodes-basics-6d9ccdc4-eeda-4d48-ba36-3d0d14341104/projects/626866" class="btn btn-branding-outline"> Visit page </a>
                 </div>         
               </div>         
-              <div class="col-6 d-none d-lg-block">           
+              <div class="col d-none d-lg-block">           
                 <img src="images/plants.png" class="img-fluid rounded shadow" alt="">         
               </div>       
             </div>
