added footer and improved layout

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-   <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
@@ -29,7 +29,9 @@
     <title>My Software Portfolio</title>
   </head>
   <body>
-     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top align-items-center shadow">
+    <nav
+      class="navbar navbar-expand-lg navbar-light bg-light fixed-top align-items-center shadow"
+    >
       <div class="container-fluid">
         <a class="navbar-brand" href="">S M E O</a>
         <button
@@ -51,10 +53,10 @@
             <a class="nav-link" href="">Contact Me</a>
           </div>
         </div>
-    </div>
+      </div>
     </nav>
     <div class="hero">
-      <p>👋 Hello, I'm</p>
+      <p>Hello, I'm</p>
       <h1>Stella-Maris Ojideh</h1>
       <h2 class="mb-5">Front-end Developer from London, UK 🇬🇧</h2>
       <div>
@@ -67,35 +69,62 @@
     <div class="container">
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="images/weatherapp.png" class="img-fluid rounded shadow" alt="" />
+          <img
+            src="images/weatherapp.png"
+            class="img-fluid rounded shadow"
+            alt=""
+          />
         </div>
-       <div class="col"> 
-         <div class="project-description"> <h3 class="mb-5">Weather App</h3>
-        <p class="mb-5">
-          For this weather app I created a live weather application using HTML,
-          CSS, Open Weather API & Javascript to display for the forecast in
-          different locations. Including a 5 day forecast and a current location
-          button which will displayed the weather & descriotion where ever you
-          are. This has a default search in The Bahamas, North America
-        </p>
-        <a href="https://elastic-beaver-ed64c6.netlify.app/" class="btn btn-branding-outline =">Launch App</a>
-        </div>
+        <div class="col">
+          <div class="project-description">
+            <h3 class="mb-5">Weather App</h3>
+            <p class="mb-5">
+              For this weather app I created a live weather application using
+              HTML, CSS, Open Weather API & Javascript to display for the
+              forecast in different locations. Including a 5 day forecast and a
+              current location button which will displayed the weather &
+              descriotion where ever you are. This has a default search in The
+              Bahamas, North America
+            </p>
+            <a
+              href="https://elastic-beaver-ed64c6.netlify.app/"
+              class="btn btn-branding-outline ="
+              >Launch App</a
+            >
+          </div>
         </div>
       </div>
-      <div class="row mb-5">         
-        <div class="col">           
-          <div class="project-desciption">             
-            <h3 class="mb-5">Plants Landing Page</h3>             
-            <p class="mb-5 text-muted">               
-             For project was created using HTML, CSS, Javascript. The inspiration behind this page was plants and different ways plants help not only the planet but humans. The page also alerts and engages with users.
-              </p>             
-              <a href="https://www.shecodes.io/workshops/shecodes-basics-6d9ccdc4-eeda-4d48-ba36-3d0d14341104/projects/626866" class="btn btn-branding-outline"> Visit page </a>
-                </div>         
-              </div>         
-              <div class="col d-none d-lg-block">           
-                <img src="images/plants.png" class="img-fluid rounded shadow" alt="">         
-              </div>       
-            </div>
-            </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-desciption">
+            <h3 class="mb-5">Plants Landing Page</h3>
+            <p class="mb-5 text-muted">
+              For project was created using HTML, CSS, Javascript. The
+              inspiration behind this page was plants and different ways plants
+              help not only the planet but humans. The page also alerts and
+              engages with users.
+            </p>
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-basics-6d9ccdc4-eeda-4d48-ba36-3d0d14341104/projects/626866"
+              class="btn btn-branding-outline"
+            >
+              Visit page
+            </a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/plants.png"
+            class="img-fluid rounded shadow"
+            alt=""
+          />
+        </div>
+      </div>
+    </div>
+    <hr />
+    <p class="text-center m-4">
+      Please Note: This page will be continously updated and improved, however
+      if you wish to learn more about me then please visit the below page
+    </p>
   </body>
 </html>
