--- a/index.html
+++ b/index.html
@@ -122,9 +122,12 @@
       </div>
     </div>
     <hr />
+    <div class="footer">
     <p class="text-center m-4">
       Please Note: This page will be continously updated and improved, however
       if you wish to learn more about me then please visit the below page
     </p>
+     <a href="#" class="btn btn-branding mb-5">About me</a>
+     </div>
   </body>
 </html>
