Amended links in index.html

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="">Stella-Maris Ojideh</a>
-            <a class="nav-link" href="">Home</a>
-            <a class="nav-link" href="">About Me</a>
+            <a class="nav-link" href="/index.html">Stella-Maris Ojideh</a>
+            <a class="nav-link" href="/index.html">Home</a>
+            <a class="nav-link" href="/about.html">About Me</a>
             <a class="nav-link" href="">Contact Me</a>
           </div>
         </div>
@@ -127,11 +127,9 @@
         Please Note: This page will be continously updated and improved, however
         if you wish to learn more about me then please visit the below page
       </p>
-      <a href="#" class="btn btn-branding mb-5">About me</a>
+      <a href="/about.html" class="btn btn-branding mb-5">About me</a>
     </div>
   </body>
-<<<<<<< HEAD
+
 </html>
-=======
-</html>
->>>>>>> 599867bc0a259420545fd68f22e919e0329b559c
+
