created my about page content and amended layout for index homepage

--- a/about.html
+++ b/about.html
@@ -26,9 +26,50 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/styles.css" />
+   
     <title>My Software Portfolio</title>
   </head>
 <body>
-    
+    <nav
+    class="navbar navbar-expand-lg navbar-light bg-light fixed-top align-items-center shadow"
+  >
+    <div class="container-fluid">
+      <a class="navbar-brand" href="">S M E O</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link" href="/index.html">Stella-Maris Ojideh</a>
+          <a class="nav-link" href="/index.html">Home</a>
+          <a class="nav-link" href="/about.html">About Me</a>
+          <a class="nav-link" href="">Contact Me</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+    <div class="about-section container p-5">
+        <h1 class="mb-4"> Hi, I'm Stella-Maris Ojideh</h1>
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="about-section-content">
+    <h2 class="mb-4">Front-end Developer from London, UK</h2>
+    <p class="mb-5">My journey began randomly after seeing multiple videos detailing people coding journeys. After seeing these I took it as a sign, so I embarked on my own voyage to learning coding. After doing some research I was able to find SheCodes, an academy tailored to helping women learn front-end software engineering. Here I am, nearly a year on crafting my skills to be a great softwate engineerer.  </p>
+<a href="" class="btn btn-branding">View my projects</a>
+</div>
+</div>
+<div class="col-lg-6">
+<img src="images/headshot.jpg" class="img-fluid rounded shadow border" alt="">
+</div>
+</div>
+</div>
 </body>
 </html>
