Amended div names and set up projects page

--- a/work.html
+++ b/work.html
@@ -56,19 +56,12 @@
       </div>
     </div>
   </nav>
-    <div class="content-container container p-5">
+    <div class="content-container container">
+        <div class="content">
+                <div class="about-section-content">
         <h1 class="mb-4"> Hi, I'm Stella-Maris Ojideh</h1>
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="content">
-    <h2 class="mb-4">Front-end Developer from London, UK</h2>
-    <p class="mb-5">My journey began randomly after seeing multiple videos detailing people coding journeys. After seeing these I took it as a sign, so I embarked on my own voyage to learning coding. After doing some research I was able to find SheCodes, an academy tailored to helping women learn front-end software engineering. Here I am, nearly a year on crafting my skills to be a great softwate engineerer.  </p>
-<a href="" class="btn btn-branding">View my projects</a>
-</div>
-</div>
-<div class="col-lg-6">
-<img src="images/headshot.jpg" class="img-fluid rounded shadow border" alt="">
-</div>
+        
+ 
 </div>
 </div>
 </body>
