added content to work page and used css to design and layout everything

--- a/about.html
+++ b/about.html
@@ -51,13 +51,14 @@
           <a class="nav-link" href="/index.html">Stella-Maris Ojideh</a>
           <a class="nav-link" href="/index.html">Home</a>
           <a class="nav-link" href="/about.html">About Me</a>
+          <a class="nav-link" href="/work.html">Portfolio</a>
           <a class="nav-link" href="">Contact Me</a>
         </div>
       </div>
     </div>
   </nav>
     <div class="content-container container p-5">
-        <h1 class="mb-4"> Hi, I'm Stella-Maris Ojideh</h1>
+        <h1 class="about-me mb-4"> Hi, I'm Stella-Maris Ojideh</h1>
         <div class="row">
             <div class="col-lg-6">
                 <div class="content">
