--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <a class="nav-link" href="/index.html">Stella-Maris Ojideh</a>
             <a class="nav-link" href="/index.html">Home</a>
             <a class="nav-link" href="/about.html">About Me</a>
+            <a class="nav-link" href="/work.html">Portfolio</a>
             <a class="nav-link" href="">Contact Me</a>
           </div>
         </div>
