--- a/work.html
+++ b/work.html
@@ -51,6 +51,7 @@
           <a class="nav-link" href="/index.html">Stella-Maris Ojideh</a>
           <a class="nav-link" href="/index.html">Home</a>
           <a class="nav-link" href="/about.html">About Me</a>
+          <a class="nav-link" href="/work.html">Portfolio</a>
           <a class="nav-link" href="">Contact Me</a>
         </div>
       </div>
@@ -58,9 +59,21 @@
   </nav>
     <div class="content-container container">
         <div class="content">
-                <div class="about-section-content">
-        <h1 class="mb-4"> Hi, I'm Stella-Maris Ojideh</h1>
-        
+        <h1 class="mb-5"> What I've been working on <br"> <div class="text-secondary">👩‍💻 Front-end projects 👩‍💻 </div> </h1>
+        <div class="row">
+            <div class="col-md-6 mb-4">
+                <img src="images/weatherapp.png" class="img-fluid mb-3 rounded border" alt="">
+                <h3 class="text-center m-0">Weather Project</h3>
+                <p class="text-center text-muted"> <strong>Built with </strong>  HTML, CSS, Javascript, API Weather App, Bootstrap, VS Code, Github & Netlify</p>
+
+            </div>
+            <div class="col-md-6 mb-4">
+                <img src="images/plants.png" class="img-fluid mb-3 round border" alt="">
+                <h3 class="text-center m-0">Plant Project</h3>
+                <p class="text-center text-muted"><strong>Built with </strong>   HTML, CSS, Javascript & VS Code</p>
+
+            </div>
+        </div>
  
 </div>
 </div>
