--- a/work.html
+++ b/work.html
@@ -59,7 +59,7 @@
   </nav>
     <div class="content-container container">
         <div class="content">
-        <h1 class="mb-5"> What I've been working on <br"> <div class="text-secondary">👩‍💻 Front-end projects 👩‍💻 </div> </h1>
+        <h1 class="mb-5"> What I've been working on <br"> <div class="text-secondary">👩🏿‍💻 Front-end projects 👩🏿‍💻</div> </h1>
         <div class="row">
             <div class="col-md-6 mb-4">
                 <img src="images/weatherapp.png" class="img-fluid mb-3 rounded border" alt="">
@@ -71,7 +71,6 @@
                 <img src="images/plants.png" class="img-fluid mb-3 round border" alt="">
                 <h3 class="text-center m-0">Plant Project</h3>
                 <p class="text-center text-muted"><strong>Built with </strong>   HTML, CSS, Javascript & VS Code</p>
-
             </div>
         </div>
  
