--- a/contact.html
+++ b/contact.html
@@ -57,20 +57,14 @@
       </div>
     </div>
   </nav>
-    <div class="content-container container p-5">
-        <h1 class="about-me mb-4"> Hi, I'm Stella-Maris Ojideh</h1>
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="content">
-    <h2 class="mb-4">Front-end Developer from London, UK</h2>
-    <p class="mb-5">My journey began randomly after seeing multiple videos detailing people coding journeys. After seeing these I took it as a sign, so I embarked on my own voyage to learning coding. After doing some research I was able to find SheCodes, an academy tailored to helping women learn front-end software engineering. Here I am, nearly a year on crafting my skills to be a great software engineerer.  </p>
-<a href="" class="btn btn-branding">View my projects</a>
-</div>
-</div>
-<div class="col-lg-6">
-<img src="images/headshot.jpg" class="img-fluid rounded shadow border" alt="">
-</div>
-</div>
-</div>
+  <div class="content-container container">
+    <div class="content">
+        <h1 class="contact-me-page mb-5 text-center"> <strong>Let's get in touch! </strong> </h1>
+        <h3 class="text-center">📧 Email:</h3>
+        <p class="text-center"> <a href="mailto:ojidehs@gmail.com" target="_blank">ojidehs@gmail.com</a> </p>
+        <h3 class="text-center"> 👩🏿‍💻 LinkedIn:</h3>
+        <p class="text-center"> <a href="https://www.linkedin.com/in/stella-maris-ojideh-514a20214/" target="_blank"> Stella-Maris Ojideh</a> </p> 
+    </div>
+  </div>
 </body>
 </html>
