--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a class="nav-link" href="/index.html">Home</a>
             <a class="nav-link" href="/about.html">About Me</a>
             <a class="nav-link" href="/work.html">Portfolio</a>
-            <a class="nav-link" href="">Contact Me</a>
+            <a class="nav-link" href="/contact.html">Contact Me</a>
           </div>
         </div>
       </div>
