--- a/work.html
+++ b/work.html
@@ -52,7 +52,7 @@
           <a class="nav-link" href="/index.html">Home</a>
           <a class="nav-link" href="/about.html">About Me</a>
           <a class="nav-link" href="/work.html">Portfolio</a>
-          <a class="nav-link" href="">Contact Me</a>
+          <a class="nav-link" href="/contact.html">Contact Me</a>
         </div>
       </div>
     </div>
