--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
   </nav>
   <div class="content-container container">
     <div class="content">
-        <h1 class="contact-me-page mb-5 text-center"> <strong>Let's get in touch! </strong> </h1>
+        <h1 class="mb-5 text-center"> <strong>Let's get in touch! </strong> </h1>
         <h3 class="text-center">📧 Email:</h3>
         <p class="text-center"> <a href="mailto:ojidehs@gmail.com" target="_blank">ojidehs@gmail.com</a> </p>
         <h3 class="text-center"> 👩🏿‍💻 LinkedIn:</h3>
