--- a/about.html
+++ b/about.html
@@ -72,5 +72,13 @@
 </div>
 </div>
 </div>
+<footer>
+    <div class="social-links d-flex justify-content-center">
+        <a href="https://github.com/StellaBellaO" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/stella-maris-ojideh-514a20214/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+    </div>
+    <div class="d-flex justify-content-center">
+        <a href="mailto:ojidehs@gmail.com" class="email-link">Email:ojidehs@gmail.com </a> </div>
+</footer>
 </body>
 </html>
