--- a/contact.html
+++ b/contact.html
@@ -66,5 +66,13 @@
         <p class="text-center"> <a href="https://www.linkedin.com/in/stella-maris-ojideh-514a20214/" target="_blank"> Stella-Maris Ojideh</a> </p> 
     </div>
   </div>
+  <footer>
+    <div class="social-links d-flex justify-content-center">
+        <a href="https://github.com/StellaBellaO" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/stella-maris-ojideh-514a20214/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+    </div>
+    <div class="d-flex justify-content-center">
+        <a href="mailto:ojidehs@gmail.com" class="email-link">Email:ojidehs@gmail.com </a> </div>
+</footer>
 </body>
 </html>
