--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <meta name="description" content="Stella-Maris Ojideh is a front-end developer from London, currently living in Birstol">
+    <title>Front-end Developer - Stella-Maris Ojideh</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -89,7 +91,7 @@
             </p>
             <a
               href="https://elastic-beaver-ed64c6.netlify.app/"
-              class="btn btn-branding-outline ="
+              class="btn btn-branding-outline"
               >Launch App</a
             >
           </div>
@@ -137,7 +139,8 @@
         </div>
         <div class="d-flex justify-content-center">
             <a href="mailto:ojidehs@gmail.com" class="email-link">Email:ojidehs@gmail.com </a> </div>
-    </footer>
+    <p class="open-sourced text-center mt-5"> 🗄️ This Portfolio was coded by Stella-Maris Ojideh, and is <a href="https://github.com/StellaBellaO/Stella-Maris-Ojideh-Portfolio" target="_blank" class="github">open-sourced 🗄️ </a> </p>
+        </footer>
   </body>
 </html>
 
