--- a/work.html
+++ b/work.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Stella-Maris Ojideh is a front-end developer from London, currently living in Birstol">
+    <title>Front-end Developer - Stella-Maris Ojideh</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -62,7 +64,7 @@
         <h1 class="mb-5"> What I've been working on <br"> <div class="text-secondary">👩🏿‍💻 Front-end projects 👩🏿‍💻</div> </h1>
         <div class="row">
             <div class="col-md-6 mb-4">
-                <img src="images/weatherapp.png" class="img-fluid mb-3 rounded border" alt="">
+                <img src="images/weatherapp.png" class="img-fluid mb-3 rounded border" alt="this is my weather project created with html, css and javascript by stella-maris ojideh">
                 <h3 class="text-center m-0">Weather Project</h3>
                 <p class="text-center text-muted"> <strong>Built with </strong>  HTML, CSS, Javascript, API Weather App, Bootstrap, VS Code, Github & Netlify</p>
 
@@ -83,6 +85,7 @@
     </div>
     <div class="d-flex justify-content-center">
         <a href="mailto:ojidehs@gmail.com" class="email-link">Email:ojidehs@gmail.com </a> </div>
-</footer>
+        <p class="open-sourced text-center mt-5"> 🗄️ This Portfolio was coded by Stella-Maris Ojideh, and is <a href="https://github.com/StellaBellaO/Stella-Maris-Ojideh-Portfolio" target="_blank" class="github">open-sourced 🗄️ </a> </p>
+    </footer>
 </body>
 </html>
