made project links target blank

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <h1>Stella-Maris Ojideh</h1>
       <h2 class="mb-5">Front-end Developer from London, UK 🇬🇧</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="/contact.html" class="btn btn-branding">Contact me</a>
       </div>
     </div>
     <p class="text-center m-5 bold">
@@ -75,7 +75,7 @@
           <img
             src="images/weatherapp.png"
             class="img-fluid rounded shadow"
-            alt=""
+            alt="stella-maris ojideh weather app project-desciption"
           />
         </div>
         <div class="col">
