--- a/work.html
+++ b/work.html
@@ -70,7 +70,7 @@
 
             </div>
             <div class="col-md-6 mb-4">
-                <img src="images/plants.png" class="img-fluid mb-3 round border" alt="">
+                <img src="images/plants.png" class="img-fluid mb-3 round border" alt="this is my website created about plants which used html, css and javascript">
                 <h3 class="text-center m-0">Plant Project</h3>
                 <p class="text-center text-muted"><strong>Built with </strong>   HTML, CSS, Javascript & VS Code</p>
             </div>
