amended links and made sure paddings were correct on all page

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     class="navbar navbar-expand-lg navbar-light bg-light fixed-top align-items-center shadow"
   >
     <div class="container-fluid">
-      <a class="navbar-brand" href="">S M E O</a>
+      <a class="navbar-brand" href="/index.html">S M E O</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -66,7 +66,7 @@
                 <div class="content">
     <h2 class="mb-4">Front-end Developer from London, UK</h2>
     <p class="mb-5">My journey began randomly after seeing multiple videos detailing people coding journeys. After seeing these I took it as a sign, so I embarked on my own voyage to learning coding. After doing some research I was able to find SheCodes, an academy tailored to helping women learn front-end software engineering. Here I am, nearly a year on crafting my skills to be a great software engineerer.  </p>
-<a href="" class="btn btn-branding">View my projects</a>
+<a href="/work.html" class="btn btn-branding">View my projects</a>
 </div>
 </div>
 <div class="col-lg-6">
