--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
     class="navbar navbar-expand-lg navbar-light bg-light fixed-top align-items-center shadow"
   >
     <div class="container-fluid">
-      <a class="navbar-brand" href="">S M E O</a>
+      <a class="navbar-brand" href="/index.html">S M E O</a>
       <button
         class="navbar-toggler"
         type="button"
