--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       class="navbar navbar-expand-lg navbar-light bg-light fixed-top align-items-center shadow"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="">S M E O</a>
+        <a class="navbar-brand" href="/index.html">S M E O</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -90,7 +90,7 @@
               Bahamas, North America
             </p>
             <a
-              href="https://elastic-beaver-ed64c6.netlify.app/"
+              href="https://elastic-beaver-ed64c6.netlify.app/" target="_blank"
               class="btn btn-branding-outline"
               >Launch App</a
             >
@@ -108,7 +108,7 @@
               engages with users.
             </p>
             <a
-              href="https://www.shecodes.io/workshops/shecodes-basics-6d9ccdc4-eeda-4d48-ba36-3d0d14341104/projects/626866"
+              href="https://www.shecodes.io/workshops/shecodes-basics-6d9ccdc4-eeda-4d48-ba36-3d0d14341104/projects/626866" target="_blank"
               class="btn btn-branding-outline"
             >
               Visit page
