--- a/work.html
+++ b/work.html
@@ -36,7 +36,7 @@
     class="navbar navbar-expand-lg navbar-light bg-light fixed-top align-items-center shadow"
   >
     <div class="container-fluid">
-      <a class="navbar-brand" href="">S M E O</a>
+      <a class="navbar-brand" href="/index.html">S M E O</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -64,15 +64,26 @@
         <h1 class="mb-5"> What I've been working on <br"> <div class="text-secondary">👩🏿‍💻 Front-end projects 👩🏿‍💻</div> </h1>
         <div class="row">
             <div class="col-md-6 mb-4">
-                <img src="images/weatherapp.png" class="img-fluid mb-3 rounded border" alt="this is my weather project created with html, css and javascript by stella-maris ojideh">
+                <img src="images/weatherapp.png" class="weather-app img-fluid mb-3 rounded border" alt="this is my weather project created with html, css and javascript by stella-maris ojideh">
                 <h3 class="text-center m-0">Weather Project</h3>
                 <p class="text-center text-muted"> <strong>Built with </strong>  HTML, CSS, Javascript, API Weather App, Bootstrap, VS Code, Github & Netlify</p>
+                <a
+                href="https://elastic-beaver-ed64c6.netlify.app/" target="_blank"
+                class="button-link btn btn-branding-outline"
+                >Launch App</a
+              >
 
             </div>
             <div class="col-md-6 mb-4">
                 <img src="images/plants.png" class="img-fluid mb-3 round border" alt="this is my website created about plants which used html, css and javascript">
                 <h3 class="text-center m-0">Plant Project</h3>
                 <p class="text-center text-muted"><strong>Built with </strong>   HTML, CSS, Javascript & VS Code</p>
+                <a
+                href="https://www.shecodes.io/workshops/shecodes-basics-6d9ccdc4-eeda-4d48-ba36-3d0d14341104/projects/626866" target="_blank"
+                class="button-link btn btn-branding-outline"
+              >
+                Visit page
+              </a>
             </div>
         </div>
  
