made changed and added newer projects

--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
       <div class="row">
         <div class="col d-none d-lg-block">
           <img
-            src="images/weatherapp.png"
+            src="images/weather.png"
             class="img-fluid rounded shadow"
             alt="stella-maris ojideh weather app project-desciption"
           />
         </div>
         <div class="col">
           <div class="project-description">
-            <h3 class="mb-5">Weather App</h3>
+            <h3 class="mb-5">Responsive Weather App</h3>
             <p class="mb-5">
-              For this weather app I created a live weather application using
+              For this weather app I created a responsive live weather application using
               HTML, CSS, Open Weather API & Javascript to display for the
               forecast in different locations. Including a 5 day forecast and a
               current location button which will displayed the weather &
@@ -90,7 +90,7 @@
               Bahamas, North America
             </p>
             <a
-              href="https://elastic-beaver-ed64c6.netlify.app/" target="_blank"
+              href="https://hungry-fermat-8c1465.netlify.app/" target="_blank"
               class="btn btn-branding-outline"
               >Launch App</a
             >
@@ -100,15 +100,13 @@
       <div class="row mb-5">
         <div class="col">
           <div class="project-desciption">
-            <h3 class="mb-5">Plants Landing Page</h3>
+            <h3 class="mb-5">React Weather App</h3>
             <p class="mb-5 text-muted">
-              For project was created using HTML, CSS, Javascript. The
-              inspiration behind this page was plants and different ways plants
-              help not only the planet but humans. The page also alerts and
-              engages with users.
+              This project was a React live weather app created using React, API, HTML, CSS, Javascript. The
+              inspiration behind this page was to create a fresh weather app with vibrant & warm colours.
             </p>
             <a
-              href="https://www.shecodes.io/workshops/shecodes-basics-6d9ccdc4-eeda-4d48-ba36-3d0d14341104/projects/626866" target="_blank"
+              href="https://chimerical-manatee-089194.netlify.app/" target="_blank"
               class="btn btn-branding-outline"
             >
               Visit page
@@ -117,10 +115,32 @@
         </div>
         <div class="col d-none d-lg-block">
           <img
-            src="images/plants.png"
+            src="images/react.png"
             class="img-fluid rounded shadow"
             alt=""
           />
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col d-none d-lg-block">
+        <img
+          src="images/dictionary.png"
+          class="img-fluid rounded shadow"
+          alt="stella-maris ojideh dictionary app project-desciption"
+        />
+      </div>
+      <div class="col">
+        <div class="project-description">
+          <h3 class="mb-5">React Dictionary App</h3>
+          <p class="mb-5">
+            I created a React dictionary app with live data and photos using HTML, CSS, Javascript, Bootstrap, React, API etc. I used different components to design and structure this APP which can be see on GitHub.
+          </p>
+          <a
+            href="https://spiffy-manatee-3e127b.netlify.app/" target="_blank"
+            class="btn btn-branding-outline"
+            >Launch Dictionary App</a
+          >
         </div>
       </div>
     </div>
