--- a/work.html
+++ b/work.html
@@ -61,12 +61,12 @@
   </nav>
     <div class="content-container container">
         <div class="content">
-        <h1 class="mb-5"> What I've been working on <br"> <div class="text-secondary">👩🏿‍💻 Front-end projects 👩🏿‍💻</div> </h1>
+        <h1 class="mb-5"> What I've been working on <br"> <div class="text-secondary"> <small>Front-end projects </small> </div> </h1>
         <div class="row">
             <div class="col-md-6 mb-4">
-                <img src="images/weatherapp.png" class="weather-app img-fluid mb-3 rounded border" alt="this is my weather project created with html, css and javascript by stella-maris ojideh">
+                <img src="images/weather.png" class="weather-app img-fluid mb-3 rounded border" alt="this is my weather project created with html, css and javascript by stella-maris ojideh">
                 <h3 class="text-center m-0">Weather Project</h3>
-                <p class="text-center text-muted"> <strong>Built with </strong>  HTML, CSS, Javascript, API Weather App, Bootstrap, VS Code, Github & Netlify</p>
+                <p class="text-center text-muted"> <strong>Built with </strong>  HTML, CSS, Javascript, API, Bootstrap, VS Code, Github & Netlify</p>
                 <a
                 href="https://elastic-beaver-ed64c6.netlify.app/" target="_blank"
                 class="button-link btn btn-branding-outline"
@@ -75,17 +75,28 @@
 
             </div>
             <div class="col-md-6 mb-4">
-                <img src="images/plants.png" class="img-fluid mb-3 round border" alt="this is my website created about plants which used html, css and javascript">
-                <h3 class="text-center m-0">Plant Project</h3>
-                <p class="text-center text-muted"><strong>Built with </strong>   HTML, CSS, Javascript & VS Code</p>
+                <img src="images/react.png" class="img-fluid mb-3 round border" alt="this is my website created about plants which used html, css and javascript">
+                <h3 class="text-center m-0">React Weather Project</h3>
+                <p class="text-center text-muted"><strong>Built with </strong>   React, HTML, CSS, Javascript, API, Bootstrap, VS Code, Github & Netlify</p>
                 <a
-                href="https://www.shecodes.io/workshops/shecodes-basics-6d9ccdc4-eeda-4d48-ba36-3d0d14341104/projects/626866" target="_blank"
-                class="button-link btn btn-branding-outline"
+                href="https://chimerical-manatee-089194.netlify.app/" target="_blank"
+                class="second-link btn btn-branding-outline"
               >
-                Visit page
+                Launch App
               </a>
             </div>
         </div>
+        <div class="col-md-6 mb-4">
+          <img src="images/dictionary.png" class="dictionary-app img-fluid mb-3 rounded border" alt="this is my react dictionary project created with react,html, css and javascript by stella-maris ojideh">
+          <h3 class="text-center m-0">React Dictionary Project</h3>
+          <p class="text-center text-muted"> <strong>Built with </strong>  React, HTML, CSS, Javascript, API , Bootstrap, VS Code, Github & Netlify </p>
+          <a
+          href="https://spiffy-manatee-3e127b.netlify.app/" target="_blank"
+          class="button-link btn btn-branding-outline"
+          >Launch App</a
+        >
+
+      </div>
  
 </div>
 </div>
