added new projects to portfolio and added CV

--- a/about.html
+++ b/about.html
@@ -55,6 +55,7 @@
           <a class="nav-link" href="/about.html">About Me</a>
           <a class="nav-link" href="/work.html">Portfolio</a>
           <a class="nav-link" href="/contact.html">Contact Me</a>
+          <a class="nav-link" href="/images/CV.pdf" target="_blank">CV</a>
         </div>
       </div>
     </div>
