--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <a class="nav-link" href="/about.html">About Me</a>
             <a class="nav-link" href="/work.html">Portfolio</a>
             <a class="nav-link" href="/contact.html">Contact Me</a>
+            <a class="nav-link" href="/images/CV.pdf" target="_blank">CV</a>
           </div>
         </div>
       </div>
@@ -87,7 +88,7 @@
               HTML, CSS, Open Weather API & Javascript to display for the
               forecast in different locations. Including a 5 day forecast and a
               current location button which will displayed the weather &
-              descriotion where ever you are. This has a default search in The
+              description where ever you are. This has a default search in The
               Bahamas, North America
             </p>
             <a
@@ -122,7 +123,7 @@
           />
         </div>
       </div>
-    </div>
+    
     <div class="row">
       <div class="col d-none d-lg-block">
         <img
@@ -145,6 +146,34 @@
         </div>
       </div>
     </div>
+    <div class="row mb-5">
+      <div class="col">
+        <div class="project-desciption">
+          <h3 class="mb-5"> Weather App</h3>
+          <p class="mb-5 text-muted">
+            I created a responsive live weather application using
+              HTML, CSS, Open Weather API & Javascript to display for the
+              forecast in different locations. Including a 5 day forecast and a
+              current location button which will displayed the weather &
+              description where ever you are.
+          </p>
+          <a
+            href="https://dapper-lebkuchen-541b8b.netlify.app/" target="_blank"
+            class="btn btn-branding-outline"
+          >
+            Visit page
+          </a>
+        </div>
+      </div>
+      <div class="col d-none d-lg-block">
+        <img
+          src="images/neweatherapp.png"
+          class="img-fluid rounded shadow"
+          alt=""
+        />
+      </div>
+    </div>
+  </div>
     <hr />
     <div class="footer">
       <p class="text-center m-4">
