--- a/work.html
+++ b/work.html
@@ -55,6 +55,7 @@
           <a class="nav-link" href="/about.html">About Me</a>
           <a class="nav-link" href="/work.html">Portfolio</a>
           <a class="nav-link" href="/contact.html">Contact Me</a>
+          <a class="nav-link" href="/images/CV.pdf" target="_blank">CV</a>
         </div>
       </div>
     </div>
@@ -85,7 +86,7 @@
                 Launch App
               </a>
             </div>
-        </div>
+        
         <div class="col-md-6 mb-4">
           <img src="images/dictionary.png" class="dictionary-app img-fluid mb-3 rounded border" alt="this is my react dictionary project created with react,html, css and javascript by stella-maris ojideh">
           <h3 class="text-center m-0">React Dictionary Project</h3>
@@ -97,7 +98,18 @@
         >
 
       </div>
- 
+      <div class="col-md-6 mb-4">
+        <img src="images/neweatherapp.png" class="img-fluid mb-3 round border" alt="this is my website created about plants which used html, css and javascript">
+        <h3 class="text-center m-0">Responsive Weather Project</h3>
+        <p class="text-center text-muted"><strong>Built with </strong>   HTML, CSS, Javascript, API, Bootstrap, VS Code, Github & Netlify</p>
+        <a
+        href="https://dapper-lebkuchen-541b8b.netlify.app/" target="_blank"
+        class="third-link btn btn-branding-outline"
+      >
+        Launch App
+      </a>
+    </div>
+  </div>
 </div>
 </div>
 <footer>
