amended the about page paragraph

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
             <div class="col-lg-6">
                 <div class="content">
     <h2 class="mb-4">Front-end Developer from London, UK</h2>
-    <p class="mb-5">My journey began randomly after seeing multiple videos detailing people coding journeys. After seeing these I took it as a sign, so I embarked on my own voyage to learning coding. After doing some research I was able to find SheCodes, an academy tailored to helping women learn front-end software engineering. Here I am, nearly a year on crafting my skills to be a great software engineerer.  </p>
+    <p class="mb-5">My journey began in 2020 after seeing multiple videos detailing various individual's programming journeys. I became inspired and determined, so I embarked on my own voyage to learning software engineering. After doing some research I was able to find SheCodes, an academy tailored to helping women learn front-end software engineering. Here I am, nearly a year on crafting my skills to be a great software engineerer.  </p>
 <a href="/work.html" class="btn btn-branding">View my projects</a>
 </div>
 </div>
